@@ -2,13 +2,17 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.247 2006-04-02 09:31:47 martin Exp $
+# $Id: CHANGES,v 1.248 2006-04-06 13:19:08 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 CVS head
+ - (2006/04/06) moved to read any language files located under
+    Kernel/Language/xx_*.pm at each request to have any translated words
+    e. g. for navigation bar available (Kernel/Language/xx_Custom.pm is
+    still used as latest source file)
  - (2006/03/28) added config option to show ticket title in main header
     of frontend (e. g. QueueView, ZoomView and Mailbox)
  - (2006/03/24) moved from "otrs" to "otrs-x.x.x" directory in
